Fix body overflow

--- a/front/style/layout/_modal.scss
+++ b/front/style/layout/_modal.scss
@@ -18,6 +18,7 @@
         right: 0;
         bottom: 0;
         background-color: rgba(0,0,0,0.6);
+        pointer-events: none;
     }
 
     .modal-content {
